Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <p>loye博客</p>
 
 <h1>
-<a id="rm--rf" class="anchor" href="#rm--rf" aria-hidden="true"><span class="octicon octicon-link"></span></a>rm -rf</h1>
+<a id="rm--rf-覃世令-有人要p你" class="anchor" href="#rm--rf-%E8%A6%83%E4%B8%96%E4%BB%A4-%E6%9C%89%E4%BA%BA%E8%A6%81p%E4%BD%A0" aria-hidden="true"><span class="octicon octicon-link"></span></a>rm -rf 覃世令 有人要P你</h1>
 
 <p>LC_ALL="zh.utf8"</p>
 
