--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Xloye.GitHub.io</h1>
+      <h1 class="project-name">loye168.GitHub.io</h1>
       <h2 class="project-tagline">loye博客</h2>
     </section>
 
